--- a/ansible/roles/install_mediawiki/tasks/main.yml
+++ b/ansible/roles/install_mediawiki/tasks/main.yml
@@ -42,22 +42,20 @@
 
 - name: Download Media Wiki
   get_url:
-    url: https://releases.wikimedia.org/mediawiki/1.34/mediawiki-1.34.2.tar.gz
+    url: https://resource-softwares-files.s3.ap-south-1.amazonaws.com/mediawiki.tar
     dest: /home/centos
 
 - name: Extract mediawiki tar
   unarchive:
-    src: /home/cemtos/mediawiki-1.34.2.tar.gz
+    src: /home/cemtos/mediawiki.tar.gz
     dest: /var/www
   become: true
 
-- name: Create sym link mediawiki
+- name: Set permissions mediawiki
   file:
-    src: /var/www/mediawiki-1.34.2
-    dest: /var/www/mediawiki
+    path: /var/www/mediawiki
     owner: apache
     group: apache
-    state: link
   become: true
 
 - name: Restart httpd
