--- a/ansible/mediawiki_installation/roles/install_mediawiki/tasks/main.yml
+++ b/ansible/mediawiki_installation/roles/install_mediawiki/tasks/main.yml
@@ -1,9 +1,8 @@
 - name: Install Lamp server
   yum:
-    name: "{{ item }}"
-    state: latest
-    with_items:
+    name: 
       - unzip
+      - python3-pip
       - wget
       - httpd
       - php
@@ -13,7 +12,8 @@
       - mariadb-server
       - mariadb
       - php-mbstring
-    become: true
+    state: latest
+  become: true
 
 - name: Start mariadb service
   service:
@@ -28,6 +28,18 @@
     enabled: yes
   become: true
 
+- name: Copy mysql script
+  copy: 
+    src: ../files/mysql_setup.sh
+    dest: /home/centos
+    owner: centos
+    group: centos
+
+- name: Mysql setup script
+  script:
+    cmd: /home/centos/mysql-setup.sh
+  become: true 
+  
 - name: Create a new database for wiki
   mysql_db:
     name: wikidatabase
@@ -37,7 +49,7 @@
   mysql_user:
     name: wiki
     password: shouldBeChanged
-    priv: 'wikidatabase.*'
+    priv: 'wikidatabase.*:ALL'
     state: present
 
 - name: Download Media Wiki
@@ -47,8 +59,15 @@
 
 - name: Extract mediawiki tar
   unarchive:
-    src: /home/cemtos/mediawiki.tar.gz
-    dest: /var/www
+    src: /home/centos/mediawiki.tar
+    dest: /var/www/
+    remote_src: true
+  become: true
+
+- name: Rename mediawiki
+  shell: mv mediawiki-1.34.2 mediawiki
+  args:
+    chdir: /var/www/
   become: true
 
 - name: Remove existing conf file
@@ -56,7 +75,7 @@
     path: /etc/httpd/conf/httpd.conf
     state: absent
   become: true
-  
+
 - name: Update document root
   copy:
     src: ../files/httpd.conf
